src/GeositeFramework/css/main.css
@import url("../fonts/fontello/css/mantle.css");
.clearfix:after,
.clearfix:before {
    content: " ";
    display: table
}
.clearfix:after {
    clear: both
}
.padding-2 {
    padding: 2rem
}
.padding-bottom-2 {
    padding-bottom: 2rem
}
.padding-top-2 {
    padding-top: 2rem
}
.padding-left-2 {
    padding-left: 2rem
}
.padding-right-2 {
    padding-right: 2rem
}
.padding-3 {
    padding: 3rem
}
.padding-bottom-3 {
    padding-bottom: 3rem
}
.padding-top-3 {
    padding-top: 3rem
}
.padding-left-3 {
    padding-left: 3rem
}
.padding-right-3 {
    padding-right: 3rem
}
.padding-4 {
    padding: 4rem
}
.padding-bottom-4 {
    padding-bottom: 4rem
}
.padding-top-4 {
    padding-top: 4rem
}
.padding-left-4 {
    padding-left: 4rem
}
.padding-right-4 {
    padding-right: 4rem
}
.padding-5 {
    padding: 5rem
}
.padding-bottom-5 {
    padding-bottom: 5rem
}
.padding-top-5 {
    padding-top: 5rem
}
.padding-left-5 {
    padding-left: 5rem
}
.padding-right-5 {
    padding-right: 5rem
}
.margin-2 {
    margin: 2rem
}
.margin-bottom-2 {
    margin-bottom: 2rem
}
.margin-top-2 {
    margin-top: 2rem
}
.margin-left-2 {
    margin-left: 2rem
}
.margin-right-2 {
    margin-right: 2rem
}
.margin-3 {
    margin: 3rem
}
.margin-bottom-3 {
    margin-bottom: 3rem
}
.margin-top-3 {
    margin-top: 3rem
}
.margin-left-3 {
    margin-left: 3rem
}
.margin-right-3 {
    margin-right: 3rem
}
.margin-4 {
    margin: 4rem
}
.margin-bottom-4 {
    margin-bottom: 4rem
}
.margin-top-4 {
    margin-top: 4rem
}
.margin-left-4 {
    margin-left: 4rem
}
.margin-right-4 {
    margin-right: 4rem
}
.margin-5 {
    margin: 5rem
}
.margin-bottom-5 {
    margin-bottom: 5rem
}
.margin-top-5 {
    margin-top: 5rem
}
.margin-left-5 {
    margin-left: 5rem
}
.margin-right-5 {
    margin-right: 5rem
}
.font-normal {
    font-weight: 400
}
.font-bold {
    font-weight: 700
}
.font-italic {
    font-style: italic
}
.text-uppercase {
    text-transform: uppercase
}
.text-lowercase {
    text-transform: lowercase
}
.text-capitalize {
    text-transform: capitalize
}
.text-center {
    text-align: center
}
.text-left {
    text-align: left
}
.text-right {
    text-align: right
}
.color-white {
    color: #fff
}
.color-primary {
    color: #3bb3be
}
.color-secondary {
    color: #529cad
}
.color-warning {
    color: #e7a938
}
.color-danger {
    color: #da4460
}
.background-white {
    background-color: #fff
}
.background-primary {
    background-color: #3bb3be
}
.background-secondary {
    background-color: #529cad
}
.background-warning {
    background-color: #e7a938
}
.background-danger {
    background-color: #da4460
}
.float-left {
    float: left
}
.float-right {
    float: right
}
.hidden {
    display: none
}
.display-inline-block {
    display: inline-block
}
.display-inline {
    display: inline
}
/*! normalize.css v4.1.1 | MIT License | github.com/necolas/normalize.css */

html {
    font-family: sans-serif;
    -ms-text-size-adjust: 100%;
    -webkit-text-size-adjust: 100%
}
body {
    margin: 0
}
article,
aside,
details,
figcaption,
figure,
footer,
header,
main,
menu,
nav,
section,
summary {
    display: block
}
audio,
canvas,
progress,
video {
    display: inline-block
}
audio:not([controls]) {
    display: none;
    height: 0
}
progress {
    vertical-align: baseline
}
[hidden],
template {
    display: none
}
a {
    background-color: transparent;
    -webkit-text-decoration-skip: objects
}
a:active,
a:hover {
    outline-width: 0
}
abbr[title] {
    border-bottom: none;
    text-decoration: underline;
    text-decoration: underline dotted
}
b,
strong {
    font-weight: inherit;
    font-weight: bolder
}
dfn {
    font-style: italic
}
h1 {
    font-size: 2em;
    margin: .67em 0
}
mark {
    background-color: #ff0;
    color: #000
}
small {
    font-size: 80%
}
sub,
sup {
    font-size: 75%;
    line-height: 0;
    position: relative;
    vertical-align: baseline
}
sub {
    bottom: -.25em
}
sup {
    top: -.5em
}
img {
    border-style: none
}
svg:not(:root) {
    overflow: hidden
}
code,
kbd,
pre,
samp {
    font-family: monospace, monospace;
    font-size: 1em
}
figure {
    margin: 1em 40px
}
hr {
    box-sizing: content-box;
    height: 0;
    overflow: visible
}
button,
input,
select,
textarea {
    font: inherit;
    margin: 0
}
optgroup {
    font-weight: 700
}
button,
input {
    overflow: visible
}
button,
select {
    text-transform: none
}
[type=reset],
[type=submit],
button,
html [type=button] {
    -webkit-appearance: button
}
[type=button]::-moz-focus-inner,
[type=reset]::-moz-focus-inner,
[type=submit]::-moz-focus-inner,
button::-moz-focus-inner {
    border-style: none;
    padding: 0
}
[type=button]:-moz-focusring,
[type=reset]:-moz-focusring,
[type=submit]:-moz-focusring,
button:-moz-focusring {
    outline: 1px dotted ButtonText
}
fieldset {
    border: 1px solid silver;
    margin: 0 2px;
    padding: .35em .625em .75em
}
legend {
    box-sizing: border-box;
    color: inherit;
    display: table;
    max-width: 100%;
    padding: 0;
    white-space: normal
}
textarea {
    overflow: auto
}
[type=checkbox],
[type=radio] {
    box-sizing: border-box;
    padding: 0
}
[type=number]::-webkit-inner-spin-button,
[type=number]::-webkit-outer-spin-button {
    height: auto
}
[type=search] {
    -webkit-appearance: textfield;
    outline-offset: -2px
}
[type=search]::-webkit-search-cancel-button,
[type=search]::-webkit-search-decoration {
    -webkit-appearance: none
}
::-webkit-input-placeholder {
    color: inherit;
    opacity: .54
}
::-webkit-file-upload-button {
    -webkit-appearance: button;
    font: inherit
}
*,
:after,
:before {
    box-sizing: inherit
}
html {
    font-size: 62.5%;
    box-sizing: border-box
}
.flex-container {
    display: -ms-flexbox;
    display: flex;
    -webkit-justify-content: space-around;
    -ms-flex-positive: 1;
    flex-grow: 1;
    -ms-flex-negative: 1;
    flex-shrink: 1;
    position: relative
}
/* ... */

